--- a/team and client/style.css
+++ b/team and client/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #Dae1eb;
-  font-family: 'Montserrat', sans-serif;
+  background-color: #dae1eb;
+  font-family: "Montserrat", sans-serif;
   margin: 0;
   padding: 0;
 }
@@ -49,8 +49,8 @@ body {
 
 h2 {
   color: #7749c1;
-  -webkit-transition: all .4s ease-in-out;
-  transition: all .4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
 }
 
 h3 {
@@ -81,13 +81,13 @@ h3 {
 .container .team {
   margin-left: 25px;
   margin-right: 25px;
-  background-color: #Dae1eb;
+  background-color: #dae1eb;
   padding: 30px;
   border-radius: 10px;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  -webkit-transition: all .4s ease-in-out;
-  transition: all .4s ease-in-out;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
   border-top: 8px solid #7749c1;
   height: 445px;
 }
@@ -119,19 +119,19 @@ h3 {
 }
 
 .container .team .icon-link:hover .fa-twitter {
-  color: #1DA1F2;
+  color: #1da1f2;
 }
 
 .container .team .icon-link:hover .fa-facebook-f {
-  color: #1877F2;
+  color: #1877f2;
 }
 
 .container .team .icon-link:hover .fa-instagram {
-  color: #E4405F;
+  color: #e4405f;
 }
 
 .container .team .icon-link:hover .fa-linkedin-in {
-  color: #0077B5;
+  color: #0077b5;
 }
 
 .container p {
@@ -168,7 +168,7 @@ h3 {
 }
 
 .container i .fa-twitter {
-  color: #1DA1F2;
+  color: #1da1f2;
 }
 
 .title1 h1 {
@@ -294,5 +294,166 @@ h3 {
 .client:hover .fa-github {
   margin: 56px;
   color: #F05032;
+}
+
+footer {
+  background-color: #5f6163;
+  text-align: center;
+  height: 350px;
+}
+
+footer .projet {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  cursor: pointer;
+}
+
+footer .projet:hover h3 {
+  color: #bc93fd;
+}
+
+footer .projet:hover i {
+  color: #bc93fd;
+  left: 32px;
+}
+
+footer .projet i {
+  font-size: 40px;
+  color: white;
+  position: relative;
+  top: 45px;
+  left: 22px;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+footer .projet h3 {
+  color: white;
+  font-size: 40px;
+  font-weight: normal;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+}
+
+.footer-content {
+  margin-top: 60px;
+}
+
+.flaot {
+  float: left;
+  width: 33%;
+}
+
+footer .contact {
+  color: #ffffff80;
+  margin-top: 10px;
+}
+
+footer .contact h4 {
+  font-weight: 100;
+}
+
+footer .contact h4:hover {
+  color: #bc93fd;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  cursor: pointer;
+}
+
+footer .form {
+  margin-left: 10px;
+}
+
+footer .form .text-input {
+  padding: 10px 30px;
+  margin-bottom: 20px;
+  background: none;
+  border: 1px solid #bc93fd;
+  color: white;
+  border-radius: 50px;
+  outline: none;
+  width: 160px;
+  -webkit-transition: .4s ease-in-out;
+  transition: .4s ease-in-out;
+}
+
+footer .form .text-input::-webkit-input-placeholder {
+  color: #ffffff80;
+}
+
+footer .form .text-input:-ms-input-placeholder {
+  color: #ffffff80;
+}
+
+footer .form .text-input::-ms-input-placeholder {
+  color: #ffffff80;
+}
+
+footer .form .text-input::placeholder {
+  color: #ffffff80;
+}
+
+footer .form .text-input:focus {
+  width: 230px;
+}
+
+footer .form .submit-input {
+  background: none;
+  color: #ffffff80;
+  padding: 10px 15px;
+  border: 1px solid #bc93fd;
+  border-radius: 50px;
+  -webkit-transition: .5S;
+  transition: .5S;
+}
+
+footer .form .submit-input:hover {
+  background-color: #8561be;
+  color: white;
+  border: 1px solid #8561be;
+}
+
+footer .footer-icon .icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  margin: 60px;
+}
+
+footer .footer-icon ul {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  list-style: none;
+}
+
+footer .footer-icon .icon-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  text-decoration: none;
+  font-size: 19px;
+  color: #a5a4a4;
+  border-radius: 50%;
+}
+
+footer .footer-icon .icon-link:hover .fa-twitter {
+  color: #1da1f2;
+}
+
+footer .footer-icon .icon-link:hover .fa-facebook-f {
+  color: #1877f2;
+}
+
+footer .footer-icon .icon-link:hover .fa-instagram {
+  color: #e4405f;
+}
+
+footer .footer-icon .icon-link:hover .fa-linkedin-in {
+  color: #0077b5;
 }
 /*# sourceMappingURL=style.css.map */
