--- a/footer/style.scss
+++ b/footer/style.scss
@@ -1,23 +1,137 @@
-*{
+body{
   margin:0px ;
   padding:0px ;
   box-sizing:border-box ;
+  background-color:#EEEEEE;
+  font-family:  'Montserrat';
 }
-
-
-
-.nn{
-    font-size:60px ;
-    color:  #9c8686;
-    
-}
+.cc{
+  
+  background-image: url(img/photodefotre.jpg);
+  background-size: 2000PX;
+  width: 100%;
+  height:500px ;
 
   
 
-.cc{
-  background-image: url(img/bridge-1660417_1920.jpg) ;
-  width: 2000px; height: 1440px;
-  padding-top:1000px ;
-  padding-left:1000px ;
+ 
+}
+.nn{
+  color:  #ffffff;
+ 
+ text-align: center;
+ position: relative;
+ top: 200PX;
+ font-size:99px ;
 
 }
+
+
+  
+
+.input1{
+  display: flex;
+  flex-direction: row;
+  margin-top: 3%;
+  width:100% ;
+  
+
+  .non{
+    width:350px ;
+    height:40px ;
+    margin-bottom: 20px;
+    margin-left:20% ;
+  
+    
+    
+  }
+  .numéro{
+    width:350px ;
+    height:40px ;
+    margin-left:20% ;
+    
+   
+  }
+  .adres{
+    width:350px ;
+    height:40px ; 
+    margin-bottom: 20px;
+    margin-left:22% ;
+  
+  }
+  .votre{
+    width:350px ;
+    height:40px ;
+    margin-left:22% ;
+  
+  }
+}
+
+.message{
+  box-sizing: border-box;
+  width: 41.5%;
+  margin-left: 450px;
+  height: 250px;
+  margin-top: 20px;
+  padding-bottom: 10%;
+  margin-bottom: 30px;
+}
+
+  .contenu{
+    
+  background-color:  #555454;
+    width:100% ;
+    height:250px ;
+    display: grid;
+    grid-template-columns:1fr 1fr 1fr ;
+    grid-template-rows: 10% 30% 30%;
+    }
+   .fh4 a{
+     font-size:20px ;
+     color:  #500f3c;
+     
+   }
+
+   
+  .f h4{
+    font-size:20px ;
+    color:  #912c2c;
+  
+  
+  }
+  .f a{
+    font-size:20px ;
+    color:  #500f3c;
+    
+  }
+ 
+ .contenu{
+    display: grid;
+    grid-template-columns:50% 50% ;
+    grid-template-rows: 50% 50%;
+  }
+  .fh4{
+    grid-column: 1/2;
+    grid-row:1/2 ;
+    margin-left: 200px;
+  }
+  .f{
+    grid-column: 2/3;
+    grid-row:1/2 ;
+    
+  }
+  .inputs{
+    grid-column: 1/3;
+    grid-row:2/3 ;
+    margin-left: 600px;
+  }
+  
+  
+  
+   
+  
+
+
+
+
+
