--- a/a propos (omar)/style.scss
+++ b/a propos (omar)/style.scss
@@ -46,15 +46,7 @@ body {
   font-weight: 900;
 }
 /*--------------------------------------------------------------------*/
-.fixed{
 
-    
-    
-
-    
-    
- 
-}
 .aorg{ 
  display: flex ;  
  height: 600px;
@@ -209,7 +201,7 @@ body {
 
     background-color: black;
     color: white;
-    width: 409px;
+    width: 411px;
     padding: 140px 35px ;
 }
 
@@ -236,10 +228,8 @@ body {
 
 .apaaart2{
  background-color: white;
- width: 446px;
+ width: 445px;
  padding: 140px 35px ;
-
- 
 }
 .apaaart2 h2 {
 
@@ -270,8 +260,6 @@ body {
     border-color:#EB2F5B ;
     margin-top: -36px;
     margin-left: 2px;
-
-
 }
 
 
@@ -282,7 +270,7 @@ body {
     width: 528px;
     background: url(img/bout.jpg) no-repeat ;  
 
- 
+
 }
 
 .apaaart3 h1 {
@@ -295,13 +283,12 @@ body {
 
 }
 .apaaart3 h1 a {
-
-    color:#FED841;
-    text-decoration: none;
+    color: red;
+  
 }
 
-.apaaart3 hr {
 
+.apaaart3 hr {
     height: 10px;
     background: #EB2F5B; 
     width:35%;
