--- a/team and client/style.scss
+++ b/team and client/style.scss
@@ -1,333 +1,187 @@
 @mixin flex {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 body {
-    background-color: #dae1eb;
-    font-family: "Montserrat", sans-serif;
-    margin: 0;
-    padding: 0;
+  background-color: #dae1eb;
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 .header {
-    background: url(images/Online-Leadership-and-Team-Working.jpg) no-repeat;
-    background-attachment: fixed;
-    background-size: 1550px 700px;
-    height: 600px;
+  background: url(images/Online-Leadership-and-Team-Working.jpg) no-repeat;
+  background-attachment: fixed;
+  background-size: 1550px 800px;
+  background-position: bottom;
+  height: 600px;
 
-    .abg {
-        width: 100%;
-        height: 600px;
-        position: absolute;
-        z-index: 2;
-        background-color: rgba($color: #7749c1, $alpha: 0.7);
-    }
+  .abg {
+    width: 100%;
+    height: 600px;
+    position: absolute;
+    z-index: 2;
+    background-color: rgba($color: #7749c1, $alpha: 0.7);
+  }
 }
 
 .para {
-    text-align: center;
-    width: 600px;
-    margin: 270px auto 0 auto;
-    font-size: 19px;
-    color: whitesmoke;
-    position: relative;
-    z-index: 2;
+  text-align: center;
+  width: 600px;
+  margin: 270px auto 0 auto;
+  font-size: 19px;
+  color: whitesmoke;
+  position: relative;
+  z-index: 2;
 
-    p {
-        margin-top: 30px;
-        margin-bottom: 0;
-        line-height: 150%;
-    }
+  p {
+    margin-top: 30px;
+    margin-bottom: 0;
+    line-height: 150%;
+  }
 }
 
 .title {
-    h1 {
-        text-align: center;
+  h1 {
+    text-align: center;
 
-        font-size: 65px;
-        color: white;
-        position: relative;
-        top: 160px;
-        z-index: 2;
-        margin: 0;
-        padding: 0;
-    }
+    font-size: 65px;
+    color: white;
+    position: relative;
+    top: 160px;
+    z-index: 2;
+    margin: 0;
+    padding: 0;
+  }
 }
 
 h2 {
-    color: #7749c1;
-    transition: all 0.4s ease-in-out;
+  color: #7749c1;
+  transition: all 0.4s ease-in-out;
 }
 
 h3 {
-    color: rgb(85, 83, 83);
+  color: rgb(85, 83, 83);
 }
 
 .container {
-    @include flex();
-    text-align: center;
-    margin-top: 150px;
-    flex-wrap: nowrap;
+  @include flex();
+  text-align: center;
+  margin-top: 150px;
+  flex-wrap: nowrap;
 
-    img {
-        height: 160px;
-        border-radius: 50%;
-        position: relative;
-        bottom: 110px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    }
+  img {
+    height: 160px;
+    border-radius: 50%;
+    position: relative;
+    bottom: 110px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  }
 
-    .team {
-        margin-left: 25px;
-        margin-right: 25px;
-        background-color: #dae1eb;
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-        transition: all 0.4s ease-in-out;
-        border-top: 8px solid #7749c1;
-        height: 445px;
+  .team {
+    margin-left: 25px;
+    margin-right: 25px;
+    background-color: #dae1eb;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    transition: all 0.4s ease-in-out;
+    border-top: 8px solid #7749c1;
+    height: 445px;
 
-        h2,
-        h3,
-        p {
-            position: relative;
-            bottom: 110px;
-        }
-
-        .icon-link {
-            display: flex;
-            text-decoration: none;
-            font-size: 19px;
-            color: rgb(165, 164, 164);
-            border-radius: 50%;
-            height: 45px;
-            width: 45px;
-            box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
-
-            &:hover {
-                box-shadow: inset -4px -4px 8px #ffffff73,
-                    inset 3px 3px 5px rgba(94, 104, 121, 0.288);
-
-                .fa-twitter {
-                    color: #1da1f2;
-                }
-
-                .fa-facebook-f {
-                    color: #1877f2;
-                }
-
-                .fa-instagram {
-                    color: #e4405f;
-                }
-
-                .fa-linkedin-in {
-                    color: #0077b5;
-                }
-            }
-        }
-    }
-
+    h2,
+    h3,
     p {
-        width: 240px;
-        font-size: 15px;
-        font-weight: 100;
-        height: 300px;
-        color: rgb(133, 126, 126);
-        position: relative;
-        bottom: 110px;
+      position: relative;
+      bottom: 110px;
     }
 
-    ul {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        list-style: none;
-        position: relative;
-        bottom: 200px;
-    }
+    .icon-link {
+      display: flex;
+      text-decoration: none;
+      font-size: 19px;
+      color: rgb(165, 164, 164);
+      border-radius: 50%;
+      height: 45px;
+      width: 45px;
+      box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
 
-    .icon {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    i {
-        margin: auto;
+      &:hover {
+        box-shadow: inset -4px -4px 8px #ffffff73,
+          inset 3px 3px 5px rgba(94, 104, 121, 0.288);
 
         .fa-twitter {
-            color: #1da1f2;
+          color: #1da1f2;
         }
+
+        .fa-facebook-f {
+          color: #1877f2;
+        }
+
+        .fa-instagram {
+          color: #e4405f;
+        }
+
+        .fa-linkedin-in {
+          color: #0077b5;
+        }
+      }
     }
+  }
+
+  p {
+    width: 240px;
+    font-size: 15px;
+    font-weight: 100;
+    height: 300px;
+    color: rgb(133, 126, 126);
+    position: relative;
+    bottom: 110px;
+  }
+
+  ul {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    list-style: none;
+    position: relative;
+    bottom: 200px;
+  }
+
+  .icon {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  i {
+    margin: auto;
+
+    .fa-twitter {
+      color: #1da1f2;
+    }
+  }
 }
 
 .title1 {
-    h1 {
-        text-align: center;
-        color: #7749c1;
-        font-size: 40px;
-        margin-top: 90px;
-    }
+  h1 {
+    text-align: center;
+    color: #7749c1;
+    font-size: 40px;
+    margin-top: 90px;
+  }
 }
 
 .clients1 {
-    @include flex();
-    margin: 80px;
+  @include flex();
+  margin: 80px;
 }
 
 .clients2 {
-    @include flex();
-    margin: 0 80px 0 80px;
+  @include flex();
+  margin: 0 80px 0 80px;
 }
 
 @import "./client";
 
-footer {
-    background-color: rgb(95, 97, 99);
-    text-align: center;
-    height: 350px;
-
-    .projet {
-        display: inline-flex;
-        cursor: pointer;
-
-
-        &:hover {
-            h3 {
-                color: #bc93fd;
-            }
-
-            i {
-                color: #bc93fd;
-                left: 32px;
-            }
-        }
-
-        i {
-            font-size: 40px;
-            color: white;
-            position: relative;
-            top: 45px;
-            left: 22px;
-
-            transition: all 0.4s ease-in-out;
-        }
-
-        h3 {
-            color: white;
-            font-size: 40px;
-            font-weight: normal;
-            transition: all 0.3s ease-in-out;
-        }
-    }
-}
-
-.footer-content {
-    margin-top: 60px;
-}
-
-.flaot {
-    float: left;
-    width: 33%;
-}
-
-footer {
-    .contact {
-        color: #ffffff80;
-        margin-top: 10px;
-
-        h4 {
-            font-weight: 100;
-
-        }
-
-        h4:hover {
-            color: #bc93fd;
-            transition: all 0.3s ease;
-            cursor: pointer;
-        }
-    }
-
-    .form {
-        margin-left: 10px;
-
-        .text-input {
-            padding: 10px 30px;
-            margin-bottom: 20px;
-
-            background: none;
-            border: 1px solid #bc93fd;
-            color: white;
-            border-radius: 50px;
-            outline: none;
-            width: 160px;
-            transition: .4s ease-in-out;
-
-            &::placeholder {
-                color: #ffffff80;
-            }
-
-            &:focus {
-                width: 230px;
-            }
-        }
-
-        .submit-input {
-            background: none;
-            color: #ffffff80;
-            padding: 10px 15px;
-            border: 1px solid #bc93fd;
-            border-radius: 50px;
-            transition: .5S;
-
-            &:hover {
-                background-color: #8561be;
-                color: white;
-                border: 1px solid #8561be;
-            }
-
-
-        }
-    }
-
-    .footer-icon {
-        .icon {
-            @include flex();
-            margin: 60px;
-        }
-
-        ul {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            list-style: none;
-        }
-
-        .icon-link {
-            display: flex;
-            text-decoration: none;
-            font-size: 19px;
-            color: rgb(165, 164, 164);
-            border-radius: 50%;
-
-            &:hover {
-                .fa-twitter {
-                    color: #1da1f2;
-                }
-
-                .fa-facebook-f {
-                    color: #1877f2;
-                }
-
-                .fa-instagram {
-                    color: #e4405f;
-                }
-
-                .fa-linkedin-in {
-                    color: #0077b5;
-                }
-            }
-        }
-    }
-}
+@import "./footer";
