--- a/team and client/style.scss
+++ b/team and client/style.scss
@@ -1,185 +1,187 @@
 @mixin flex {
-  display: flex;
-  justify-content: space-around;
+    display: flex;
+    justify-content: space-around;
 }
 
 body {
-  background-color: #dae1eb;
-  font-family: "Montserrat", sans-serif;
-  margin: 0;
-  padding: 0;
+    background-color: #dae1eb;
+    font-family: "Montserrat", sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 .header {
-  background: url(images/Online-Leadership-and-Team-Working.jpg) no-repeat;
-  background-attachment: fixed;
-  background-size: 1550px 800px;
-  background-position: bottom;
-  height: 600px;
-
-  .abg {
-    width: 100%;
+    background: url(images/Online-Leadership-and-Team-Working.jpg) no-repeat;
+    background-attachment: fixed;
+    background-size: 1550px 800px;
+    background-position: bottom;
     height: 600px;
-    position: absolute;
-    z-index: 2;
-    background-color: rgba($color: #7749c1, $alpha: 0.7);
-  }
+    box-shadow: 0 10px 16px 0px #7749c160;
+    ;
+
+    .abg {
+        width: 100%;
+        height: 600px;
+        position: absolute;
+        z-index: 2;
+        background-color: rgba($color: #7749c1, $alpha: 0.7);
+    }
 }
 
 .para {
-  text-align: center;
-  width: 600px;
-  margin: 270px auto 0 auto;
-  font-size: 19px;
-  color: whitesmoke;
-  position: relative;
-  z-index: 2;
+    text-align: center;
+    width: 600px;
+    margin: 270px auto 0 auto;
+    font-size: 19px;
+    color: whitesmoke;
+    position: relative;
+    z-index: 2;
 
-  p {
-    margin-top: 30px;
-    margin-bottom: 0;
-    line-height: 150%;
-  }
+    p {
+        margin-top: 30px;
+        margin-bottom: 0;
+        line-height: 150%;
+    }
 }
 
 .title {
-  h1 {
-    text-align: center;
+    h1 {
+        text-align: center;
 
-    font-size: 65px;
-    color: white;
-    position: relative;
-    top: 160px;
-    z-index: 2;
-    margin: 0;
-    padding: 0;
-  }
+        font-size: 65px;
+        color: white;
+        position: relative;
+        top: 160px;
+        z-index: 2;
+        margin: 0;
+        padding: 0;
+    }
 }
 
 h2 {
-  color: #7749c1;
-  transition: all 0.4s ease-in-out;
+    color: #7749c1;
+    transition: all 0.4s ease-in-out;
 }
 
 h3 {
-  color: rgb(85, 83, 83);
+    color: rgb(85, 83, 83);
 }
 
 .container {
-  @include flex();
-  text-align: center;
-  margin-top: 150px;
-  flex-wrap: nowrap;
+    @include flex();
+    text-align: center;
+    margin-top: 150px;
+    flex-wrap: nowrap;
 
-  img {
-    height: 160px;
-    border-radius: 50%;
-    position: relative;
-    bottom: 110px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  }
-
-  .team {
-    margin-left: 25px;
-    margin-right: 25px;
-    background-color: #dae1eb;
-    padding: 30px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    transition: all 0.4s ease-in-out;
-    border-top: 8px solid #7749c1;
-    height: 445px;
-
-    h2,
-    h3,
-    p {
-      position: relative;
-      bottom: 110px;
+    img {
+        height: 160px;
+        border-radius: 50%;
+        position: relative;
+        bottom: 110px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
 
-    .icon-link {
-      display: flex;
-      text-decoration: none;
-      font-size: 19px;
-      color: rgb(165, 164, 164);
-      border-radius: 50%;
-      height: 45px;
-      width: 45px;
-      box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
+    .team {
+        margin-left: 25px;
+        margin-right: 25px;
+        background-color: #dae1eb;
+        padding: 30px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        transition: all 0.4s ease-in-out;
+        border-top: 8px solid #7749c1;
+        height: 445px;
 
-      &:hover {
-        box-shadow: inset -4px -4px 8px #ffffff73,
-          inset 3px 3px 5px rgba(94, 104, 121, 0.288);
+        h2,
+        h3,
+        p {
+            position: relative;
+            bottom: 110px;
+        }
+
+        .icon-link {
+            display: flex;
+            text-decoration: none;
+            font-size: 19px;
+            color: rgb(165, 164, 164);
+            border-radius: 50%;
+            height: 45px;
+            width: 45px;
+            box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
+
+            &:hover {
+                box-shadow: inset -4px -4px 8px #ffffff73,
+                    inset 3px 3px 5px rgba(94, 104, 121, 0.288);
+
+                .fa-twitter {
+                    color: #1da1f2;
+                }
+
+                .fa-facebook-f {
+                    color: #1877f2;
+                }
+
+                .fa-instagram {
+                    color: #e4405f;
+                }
+
+                .fa-linkedin-in {
+                    color: #0077b5;
+                }
+            }
+        }
+    }
+
+    p {
+        width: 240px;
+        font-size: 15px;
+        font-weight: 100;
+        height: 300px;
+        color: rgb(133, 126, 126);
+        position: relative;
+        bottom: 110px;
+    }
+
+    ul {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        list-style: none;
+        position: relative;
+        bottom: 200px;
+    }
+
+    .icon {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    i {
+        margin: auto;
 
         .fa-twitter {
-          color: #1da1f2;
+            color: #1da1f2;
         }
-
-        .fa-facebook-f {
-          color: #1877f2;
-        }
-
-        .fa-instagram {
-          color: #e4405f;
-        }
-
-        .fa-linkedin-in {
-          color: #0077b5;
-        }
-      }
     }
-  }
-
-  p {
-    width: 240px;
-    font-size: 15px;
-    font-weight: 100;
-    height: 300px;
-    color: rgb(133, 126, 126);
-    position: relative;
-    bottom: 110px;
-  }
-
-  ul {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    list-style: none;
-    position: relative;
-    bottom: 200px;
-  }
-
-  .icon {
-    display: flex;
-    justify-content: space-between;
-  }
-
-  i {
-    margin: auto;
-
-    .fa-twitter {
-      color: #1da1f2;
-    }
-  }
 }
 
 .title1 {
-  h1 {
-    text-align: center;
-    color: #7749c1;
-    font-size: 40px;
-    margin-top: 90px;
-  }
+    h1 {
+        text-align: center;
+        color: #7749c1;
+        font-size: 40px;
+        margin-top: 90px;
+    }
 }
 
 .clients1 {
-  @include flex();
-  margin: 80px;
+    @include flex();
+    margin: 80px;
 }
 
 .clients2 {
-  @include flex();
-  margin: 0 80px 0 80px;
+    @include flex();
+    margin: 0 80px 0 80px;
 }
 
 @import "./client";
