--- a/style1.css
+++ b/style1.css
@@ -3,18 +3,20 @@
   padding: 0;
 }
 
-body {
-  background-color: #Dae1eb;
+html {
+  scroll-behavior: smooth;
 }
 
 body {
   height: 100%;
   font-family: 'Montserrat';
+  background-color: #Dae1eb;
 }
 
 .fixe {
   position: fixed;
   width: calc(100% - 2em);
+  z-index: 10;
 }
 
 .hhead {
@@ -108,6 +110,7 @@ body {
   position: relative;
   top: -80px;
   font-family: 'Montserrat';
+  outline: none;
 }
 
 .hhead .hbtn {
@@ -226,9 +229,17 @@ body {
   background-size: cover;
 }
 
+.hsec2 .hgrid .hone:hover {
+  background: red;
+}
+
 .hsec2 .hgrid .htwo {
   background-image: url(/Images/1.jpg);
   background-size: cover;
+}
+
+.hsec2 .hgrid .htwo:hover {
+  background: aqua;
 }
 
 .hsec2 .hgrid .htree {
@@ -236,9 +247,17 @@ body {
   background-size: cover;
 }
 
+.hsec2 .hgrid .htree:hover {
+  background: violet;
+}
+
 .hsec2 .hgrid .hfour {
   background-image: url(/Images/3.jpg);
   background-size: cover;
+}
+
+.hsec2 .hgrid .hfour:hover {
+  background: greenyellow;
 }
 
 .hsec2 .hgrid p {
@@ -272,6 +291,7 @@ body {
 }
 
 .hsec3 .p4 {
+  font-weight: bold;
   text-align: left;
   width: 600px;
   margin: 50px auto 0 auto;
@@ -294,6 +314,7 @@ body {
   position: relative;
   top: -80px;
   font-family: 'Montserrat';
+  outline: none;
 }
 
 .hsec3 .hbtn {
@@ -349,10 +370,12 @@ body {
 
 .hsec3 .SEPAR span {
   float: right;
-  color: white;
+  color: black;
   font-weight: bold;
   -webkit-transition: color .5s;
   transition: color .5s;
+  position: relative;
+  right: 15px;
 }
 
 .hsec3 .SEPAR:hover span {
@@ -391,6 +414,7 @@ body {
   position: relative;
   top: -80px;
   font-family: 'Montserrat';
+  outline: none;
 }
 
 .hsec4 .hbtn {
@@ -414,7 +438,94 @@ body {
   top: -20px;
 }
 
-.hsec5 .slider .slide {
-  float: left;
+.hsec5 .para {
+  text-align: center;
+  width: 700px;
+  margin: 50px auto 0 auto;
+  font-size: 30px;
+  color: black;
+  font-weight: bold;
+  position: relative;
+  bottom: 50px;
+}
+
+.hsec5 .para span {
+  color: #8f25D6;
+}
+
+.hsec5 .abg {
+  width: 100%;
+  height: 815px;
+  position: absolute;
+  z-index: 1;
+  background-color: rgba(119, 73, 193, 0.5);
+}
+
+.hsec5 .slides {
+  width: calc(1518px * 3);
+  -webkit-animation: glisse 10s infinite ease-in;
+          animation: glisse 10s infinite ease-in;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.hsec5 .slider {
+  width: 1518px;
+  overflow: hidden;
+}
+
+@-webkit-keyframes glisse {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  33% {
+    -webkit-transform: translateX(-1518px);
+            transform: translateX(-1518px);
+  }
+  43% {
+    -webkit-transform: translateX(-1518px);
+            transform: translateX(-1518px);
+  }
+  66% {
+    -webkit-transform: translateX(-3036px);
+            transform: translateX(-3036px);
+  }
+  76% {
+    -webkit-transform: translateX(-3036px);
+            transform: translateX(-3036px);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes glisse {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  33% {
+    -webkit-transform: translateX(-1518px);
+            transform: translateX(-1518px);
+  }
+  43% {
+    -webkit-transform: translateX(-1518px);
+            transform: translateX(-1518px);
+  }
+  66% {
+    -webkit-transform: translateX(-3036px);
+            transform: translateX(-3036px);
+  }
+  76% {
+    -webkit-transform: translateX(-3036px);
+            transform: translateX(-3036px);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
 }
 /*# sourceMappingURL=style1.css.map */
