--- a/team and client/style.scss
+++ b/team and client/style.scss
@@ -15,7 +15,6 @@ body {
     background-attachment: fixed;
     background-size: 1550px 700px;
     height: 600px;
-
     .abg {
         width: 100%;
         height: 600px;
@@ -33,7 +32,6 @@ body {
     color: whitesmoke;
     position: relative;
     z-index: 2;
-
     p {
         margin-top: 30px;
         margin-bottom: 0;
@@ -44,7 +42,6 @@ body {
 .title {
     h1 {
         text-align: center;
-
         font-size: 65px;
         color: white;
         position: relative;
@@ -69,7 +66,6 @@ h3 {
     text-align: center;
     margin-top: 150px;
     flex-wrap: nowrap;
-
     img {
         height: 160px;
         border-radius: 50%;
@@ -77,7 +73,6 @@ h3 {
         bottom: 110px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
-
     .team {
         margin-left: 25px;
         margin-right: 25px;
@@ -88,14 +83,12 @@ h3 {
         transition: all 0.4s ease-in-out;
         border-top: 8px solid #7749c1;
         height: 445px;
-
         h2,
         h3,
         p {
             position: relative;
             bottom: 110px;
         }
-
         .icon-link {
             display: flex;
             text-decoration: none;
@@ -105,30 +98,23 @@ h3 {
             height: 45px;
             width: 45px;
             box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
-
             &:hover {
-                box-shadow: inset -4px -4px 8px #ffffff73,
-                    inset 3px 3px 5px rgba(94, 104, 121, 0.288);
-
+                box-shadow: inset -4px -4px 8px #ffffff73, inset 3px 3px 5px rgba(94, 104, 121, 0.288);
                 .fa-twitter {
                     color: #1da1f2;
                 }
-
                 .fa-facebook-f {
                     color: #1877f2;
                 }
-
                 .fa-instagram {
                     color: #e4405f;
                 }
-
                 .fa-linkedin-in {
                     color: #0077b5;
                 }
             }
         }
     }
-
     p {
         width: 240px;
         font-size: 15px;
@@ -138,7 +124,6 @@ h3 {
         position: relative;
         bottom: 110px;
     }
-
     ul {
         margin: 0;
         padding: 0;
@@ -147,15 +132,12 @@ h3 {
         position: relative;
         bottom: 200px;
     }
-
     .icon {
         display: flex;
         justify-content: space-between;
     }
-
     i {
         margin: auto;
-
         .fa-twitter {
             color: #1da1f2;
         }
@@ -182,38 +164,30 @@ h3 {
 }
 
 @import "./client";
-
 footer {
     background-color: rgb(95, 97, 99);
     text-align: center;
     height: 350px;
-
     .projet {
         display: inline-flex;
         cursor: pointer;
-
-
         &:hover {
             h3 {
                 color: #bc93fd;
             }
-
             i {
                 color: #bc93fd;
                 left: 32px;
             }
         }
-
         i {
             font-size: 40px;
             color: white;
             position: relative;
             top: 45px;
             left: 22px;
-
             transition: all 0.4s ease-in-out;
         }
-
         h3 {
             color: white;
             font-size: 40px;
@@ -236,26 +210,20 @@ footer {
     .contact {
         color: #ffffff80;
         margin-top: 10px;
-
         h4 {
             font-weight: 100;
-
         }
-
         h4:hover {
             color: #bc93fd;
             transition: all 0.3s ease;
             cursor: pointer;
         }
     }
-
     .form {
         margin-left: 10px;
-
         .text-input {
             padding: 10px 30px;
             margin-bottom: 20px;
-
             background: none;
             border: 1px solid #bc93fd;
             color: white;
@@ -263,16 +231,13 @@ footer {
             outline: none;
             width: 160px;
             transition: .4s ease-in-out;
-
             &::placeholder {
                 color: #ffffff80;
             }
-
             &:focus {
                 width: 230px;
             }
         }
-
         .submit-input {
             background: none;
             color: #ffffff80;
@@ -280,50 +245,40 @@ footer {
             border: 1px solid #bc93fd;
             border-radius: 50px;
             transition: .5S;
-
             &:hover {
                 background-color: #8561be;
                 color: white;
                 border: 1px solid #8561be;
             }
-
-
         }
     }
-
     .footer-icon {
         .icon {
             @include flex();
             margin: 60px;
         }
-
         ul {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
             list-style: none;
         }
-
         .icon-link {
             display: flex;
             text-decoration: none;
             font-size: 19px;
             color: rgb(165, 164, 164);
             border-radius: 50%;
-
             &:hover {
                 .fa-twitter {
                     color: #1da1f2;
                 }
-
                 .fa-facebook-f {
                     color: #1877f2;
                 }
-
                 .fa-instagram {
                     color: #e4405f;
                 }
-
                 .fa-linkedin-in {
                     color: #0077b5;
                 }
