--- a/team and client/_client.scss
+++ b/team and client/_client.scss
@@ -7,6 +7,10 @@
     box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, .288);
     transition: all .7s;
 
+    @include mq (800px) {
+        margin: 30px;
+    }
+
     i {
         margin: 55px;
 
