--- a/team and client/style.css
+++ b/team and client/style.css
@@ -8,16 +8,23 @@ body {
 .header {
   background: url(images/Online-Leadership-and-Team-Working.jpg) no-repeat;
   background-attachment: fixed;
-  background-size: 1550px 800px;
+  background-size: cover;
   background-position: bottom;
-  height: 600px;
+  height: 700px;
   -webkit-box-shadow: 0 10px 16px 0px #7749c160;
           box-shadow: 0 10px 16px 0px #7749c160;
 }
 
+@media (max-width: 800px) {
+  .header {
+    background-size: cover;
+    background-position: bottom;
+  }
+}
+
 .header .abg {
   width: 100%;
-  height: 600px;
+  height: 700px;
   position: absolute;
   z-index: 2;
   background-color: rgba(119, 73, 193, 0.7);
@@ -30,6 +37,7 @@ body {
   font-size: 19px;
   color: whitesmoke;
   position: relative;
+  top: 30px;
   z-index: 2;
 }
 
@@ -44,7 +52,7 @@ body {
   font-size: 65px;
   color: white;
   position: relative;
-  top: 160px;
+  top: 190px;
   z-index: 2;
   margin: 0;
   padding: 0;
@@ -72,6 +80,17 @@ h3 {
       flex-wrap: nowrap;
 }
 
+@media (max-width: 800px) {
+  .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    -ms-grid-rows: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+  }
+}
+
 .container img {
   height: 160px;
   border-radius: 50%;
@@ -79,6 +98,13 @@ h3 {
   bottom: 110px;
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+@media (max-width: 800px) {
+  .container .team3,
+  .container .team4 {
+    margin-top: 80px;
+  }
 }
 
 .container .team {
@@ -147,6 +173,13 @@ h3 {
   bottom: 110px;
 }
 
+@media (max-width: 800px) {
+  .container p {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .container ul {
   margin: 0;
   padding: 0;
@@ -187,7 +220,18 @@ h3 {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  margin: 80px;
+  margin: 80px 50px 80px 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+@media (max-width: 800px) {
+  .clients1 {
+    margin: 80px 50px 0px 50px;
+  }
+  .clients1 .none {
+    display: none;
+  }
 }
 
 .clients2 {
@@ -196,7 +240,15 @@ h3 {
   display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
-  margin: 0 80px 0 80px;
+  margin: 0 50px 0 50px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+@media (max-width: 800px) {
+  .clients2 .none {
+    display: none;
+  }
 }
 
 .client {
@@ -208,6 +260,12 @@ h3 {
           box-shadow: -4px -4px 8px #ffffff73, 3px 3px 5px rgba(94, 104, 121, 0.288);
   -webkit-transition: all .7s;
   transition: all .7s;
+}
+
+@media (max-width: 800px) {
+  .client {
+    margin: 30px;
+  }
 }
 
 .client i {
@@ -350,9 +408,22 @@ footer .projet h3 {
   width: 33%;
 }
 
+@media (max-width: 800px) {
+  .flaot {
+    width: 32.90%;
+  }
+}
+
 footer .contact {
   color: #ffffff80;
   margin-top: 10px;
+}
+
+@media (max-width: 800px) {
+  footer .contact {
+    font-size: 13px;
+    margin-top: 20px;
+  }
 }
 
 footer .contact h4 {
