--- a/team and client/style.scss
+++ b/team and client/style.scss
@@ -3,6 +3,15 @@
     justify-content: space-around;
 }
 
+@mixin mq($width) {
+    @media (max-width: #{$width}) {
+        @content;
+    }
+}
+
+
+
+
 body {
     background-color: #dae1eb;
     font-family: "Montserrat", sans-serif;
@@ -13,15 +22,20 @@ body {
 .header {
     background: url(images/Online-Leadership-and-Team-Working.jpg) no-repeat;
     background-attachment: fixed;
-    background-size: 1550px 800px;
+    background-size: cover;
     background-position: bottom;
-    height: 600px;
+    height: 700px;
     box-shadow: 0 10px 16px 0px #7749c160;
-    ;
+
+    @include mq(800px) {
+        background-size: cover;
+        background-position: bottom;
+    }
+
 
     .abg {
         width: 100%;
-        height: 600px;
+        height: 700px;
         position: absolute;
         z-index: 2;
         background-color: rgba($color: #7749c1, $alpha: 0.7);
@@ -35,6 +49,7 @@ body {
     font-size: 19px;
     color: whitesmoke;
     position: relative;
+    top: 30px;
     z-index: 2;
 
     p {
@@ -51,7 +66,7 @@ body {
         font-size: 65px;
         color: white;
         position: relative;
-        top: 160px;
+        top: 190px;
         z-index: 2;
         margin: 0;
         padding: 0;
@@ -73,12 +88,27 @@ h3 {
     margin-top: 150px;
     flex-wrap: nowrap;
 
+    @include mq(800px) {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+
+    }
+
     img {
         height: 160px;
         border-radius: 50%;
         position: relative;
         bottom: 110px;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+
+    @include mq(800px) {
+
+        .team3,
+        .team4 {
+            margin-top: 80px;
+        }
     }
 
     .team {
@@ -91,6 +121,8 @@ h3 {
         transition: all 0.4s ease-in-out;
         border-top: 8px solid #7749c1;
         height: 445px;
+
+
 
         h2,
         h3,
@@ -136,10 +168,18 @@ h3 {
         width: 240px;
         font-size: 15px;
         font-weight: 100;
+
         height: 300px;
         color: rgb(133, 126, 126);
         position: relative;
         bottom: 110px;
+
+        @include mq(800px) {
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+
     }
 
     ul {
@@ -176,12 +216,31 @@ h3 {
 
 .clients1 {
     @include flex();
-    margin: 80px;
+    margin: 80px 50px 80px 50px;
+    flex-wrap: wrap;
+
+    @include mq(800px) {
+        margin: 80px 50px 0px 50px;
+
+        .none {
+            display: none;
+
+        }
+    }
 }
 
 .clients2 {
     @include flex();
-    margin: 0 80px 0 80px;
+    margin: 0 50px 0 50px;
+    flex-wrap: wrap;
+
+    @include mq(800px) {
+        .none {
+            display: none;
+
+        }
+    }
+
 }
 
 @import "./client";
