--- a/service/style.css
+++ b/service/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Montserrat', sans-serif;
+  width: 100%;
 }
 
 .stitre {
@@ -94,6 +95,10 @@ hr {
   width: 30%;
 }
 
+i {
+  font-size: 700%;
+}
+
 .ser {
   position: relative;
   right: 50px;
@@ -112,6 +117,71 @@ hr {
 .fab {
   margin: 1px 40px;
   border-radius: 500px;
+}
+
+/*tablet*/
+@media (max-width: 768px) {
+  body {
+    width: 700px;
+  }
+  .svideo {
+    width: 600px;
+    height: 300px;
+    position: relative;
+    left: 50px;
+  }
+  .Spara {
+    font-size: 70%;
+    text-align: center;
+  }
+  .stitre {
+    font-size: 120%;
+    margin-bottom: -12px;
+  }
+  .Spart1 {
+    font-size: 90%;
+  }
+  i {
+    font-size: 300%;
+  }
+  .para1 {
+    font-size: 50%;
+  }
+  .btn {
+    height: 29px;
+    width: 100px;
+    padding: 200px;
+  }
+  .StitreD {
+    font-size: 120%;
+    margin: 10px;
+  }
+  .StitreF {
+    font-size: 100%;
+    margin-top: -10px;
+  }
+  .sp2 {
+    font-size: 100%;
+  }
+  .btb {
+    width: 250px;
+    height: 60px;
+    font-size: 100%;
+  }
+  .ser {
+    font-size: 100%;
+    margin: 10px;
+    position: relative;
+    right: 60px;
+  }
+  .btR {
+    height: 40px;
+    width: 120px;
+    font-size: 90%;
+  }
+  i.fab {
+    font-size: 30px;
+  }
 }
 
 .Spartie3 {
